RecyclerView images loaded in with Picasso.

--- a/app/src/main/res/layout/car_view.xml
+++ b/app/src/main/res/layout/car_view.xml
@@ -20,9 +20,8 @@
 
             <ImageView
                 android:id="@+id/image_car_view"
-                android:layout_width="wrap_content"
+                android:layout_width="match_parent"
                 android:layout_height="@dimen/default_image_height"
-                android:src="@drawable/tesla"
                 android:scaleType="centerCrop"
                 android:padding="5dp"/>
 
