--- a/app/src/main/res/layout/car_view.xml
+++ b/app/src/main/res/layout/car_view.xml
@@ -29,7 +29,7 @@
                 android:id="@+id/btn_car_view_buy"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/default_button_height"
-                android:text="@string/add_car"
+                android:text="@string/buy_car"
                 android:layout_gravity="bottom"
                 android:backgroundTint="@color/colorPrimary"
                 android:textColor="@android:color/white"/>
